# edgejs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md  TEST_STRATEGY.md  WASIX_TODO.md  flake.nix  install.sh  wasmer.toml
benchmarks/: run.js  (+4 more)
napi-v8/: CMakeLists.txt
napi-v8/include/: napi_v8_unofficial_testing.h  unofficial_napi.h
napi-v8/src/: js_native_api_v8.cc  node_api_v8.cc  unofficial_napi.cc  unofficial_napi_v8_test_env.cc
napi-v8/src/internal/: napi_v8_env.h
napi-v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md
napi-v8/tests/runners/: test_11_constructor.cc  test_12_error.cc  test_15_function.cc  test_16_reference.cc  test_17_string.cc  test_18_conversions.cc  test_19_properties.cc  test_21_general.cc  test_22_node_exception.cc  test_29_bigint.cc  test_30_date.cc  test_31_dataview.cc  test_32_sharedarraybuffer.cc  test_33_typedarray.cc  test_34_new_target.cc  test_35_promise.cc  test_36_handle_scope.cc  test_37_reference_double_free.cc  test_38_finalizer.cc  test_39_cannot_run_js.cc  test_40_pending_exception.cc  test_41_instance_data.cc  test_50_node_env_teardown_gc.cc  test_51_node_fatal.cc  test_52_node_fatal_exception.cc  test_53_node_init_order.cc  test_6_object_wrap.cc  test_7_factory_wrap.cc  test_8_passing_wrapped.cc  test_9_array.cc  upstream_js_test.h
napi/v8/: CMakeLists.txt
napi/v8/cmake/: NapiV8Resolver.cmake
napi/v8/scripts/: test-local-v8.sh
napi/v8/src/: edge_v8_platform.cc  edge_v8_platform.h  js_native_api_v8.cc  ubi_v8_platform.cc  ubi_v8_platform.h  unofficial_napi.cc  unofficial_napi_contextify.cc  unofficial_napi_error_utils.cc
napi/v8/src/internal/: napi_v8_env.h  node_v8_default_flags.h  unofficial_napi_bridge.h
napi/v8/tests/: CMakeLists.txt  README.md
napi/wasmer/: Cargo.toml  build.rs  testexit.js
napi/wasmer/src/: cli.rs  ctx.rs  lib.rs  main.rs  napi_bridge_init.cc  snapi.rs  wasix.rs
napi/wasmer/src/guest/: callback.rs  mod.rs  napi.rs
napi/wasmer/tests/: build-test-native.sh  build-test-wasix.sh
ubi/: CMakeLists.txt
ubi/cmake/: embed_binary.py  wasix-libuv-compat.h  wasixcc-c  wasixcc-env.sh  wasixccxx-c++20
ubi/scripts/: build-wasix.sh
ubi/src/: node_api.cc  ubi_async_wrap.cc  ubi_async_wrap.h  ubi_buffer.cc  ubi_buffer.h  ubi_cares_wrap.cc  ubi_cares_wrap.h  ubi_cli.cc  ubi_cli.h  ubi_crypto.cc  ubi_crypto.h  ubi_encoding.cc  ubi_encoding.h  ubi_fs.cc  ubi_fs.h  ubi_http_parser.cc  ubi_http_parser.h  ubi_js_stream.cc  ubi_js_stream.h  ubi_js_udp_wrap.cc  ubi_js_udp_wrap.h  ubi_main.cc  ubi_module_loader.cc  ubi_module_loader.h  ubi_os.cc  ubi_os.h  ubi_path.cc  ubi_path.h  ubi_pipe_wrap.cc  ubi_pipe_wrap.h  ubi_process.cc  ubi_process.h  ubi_process_wrap.cc  ubi_process_wrap.h  ubi_runtime.cc  ubi_runtime.h  ubi_runtime_platform.h  ubi_runtime_platform_v8.cc  ubi_signal_wrap.cc  ubi_signal_wrap.h  (+27 more)
ubi/src/builtins/: async_hooks.js  child_process.js  crypto.js  domain.js  events.js  fs.js  os.js  perf_hooks.js  repl.js  test.js  tls.js  util.js
ubi/src/builtins/internal/: abort_controller.js  async_hooks.js  child_process.js  errors.js  repl.js  uv_errmap.js  validators.js  vm.js
ubi/src/crypto/: ubi_crypto_binding.cc  ubi_crypto_binding.h  ubi_secure_context_bridge.h
ubi/src/internal_binding/: binding_async_wrap.cc  binding_blob.cc  binding_buffer.cc  binding_builtins.cc  binding_config.cc  binding_constants.cc  binding_contextify.cc  binding_credentials.cc  binding_crypto.cc  binding_encoding_binding.cc  binding_fs.cc  binding_fs_dir.cc  binding_icu.cc  binding_messaging.cc  binding_module_wrap.cc  binding_performance.cc  binding_process_methods.cc  binding_symbols.cc  binding_url.cc  binding_util.cc  binding_v8.cc  binding_worker.cc  dispatch.cc  dispatch.h
ubi/tests/node-compat/common/: index.js
ubi/tests/runners/: test_0_runtime_phase01.cc  test_1_cli_phase01.cc  test_2_module_loader_phase02.cc  test_3_node_dropin_subset_phase02.cc  test_4_internal_binding_dispatch_phase02.cc  test_5_internal_binding_parity_phase03.cc
unode/: CMakeLists.txt
unode/scripts/: test-local-v8.sh
unode/src/: node_api.cc  unode_buffer.cc  unode_buffer.h  unode_cli.cc  unode_crypto.cc  unode_crypto.h  unode_fs.cc  unode_http_parser.cc  unode_module_loader.cc  unode_module_loader.h  unode_node_api.cc  unode_node_api.h  unode_os.cc  unode_pipe_wrap.cc  unode_process.cc  unode_process.h  unode_runtime.cc  unode_runtime.h  unode_runtime_platform.h  unode_runtime_platform_v8.cc  unode_signal_wrap.cc  unode_signal_wrap.h  unode_spawn_sync.cc  unode_tcp_wrap.cc  unode_tty_wrap.cc  unode_tty_wrap.h  unode_udp_wrap.cc  unofficial_napi_testing_until_gc.cc
unode/src/builtins/: _http_agent.js  _http_client.js  _http_common.js  _http_incoming.js  _http_outgoing.js  _http_server.js  assert.js  buffer.js  child_process.js  crypto.js  dgram.js  diagnostics_channel.js  dns.js  domain.js  events.js  fs.js  http.js  https.js  inspector.js  internal_test_binding.js  module.js  net.js  punycode.js  querystring.js  stream.js  string_decoder.js  timers.js  tls.js  tty.js  url.js  util.js  vm.js  worker_threads.js
unode/src/builtins/dns/: promises.js
unode/src/builtins/internal/: abort_controller.js  assert.js  blob.js  buffer.js  errors.js  event_target.js  fixed_queue.js  freelist.js  http.js  js_stream_socket.js  linkedlist.js  net.js  options.js  priority_queue.js  stream_base_commons.js  timers.js  tty.js  url.js  util.js  validators.js  webidl.js
unode/src/builtins/stream/: promises.js  web.js
unode/src/builtins/timers/: promises.js
unode/src/crypto/: unode_crypto_binding.cc  unode_crypto_binding.h
unode/tests/: CMakeLists.txt
unode/tests/node-compat/: DELTA_NOTES.md  FS_IMPLEMENTATION_PLAN.md  NEXT_STEPS_RAW.md
unode/tests/node-compat/builtins/: assert.js  buffer.js  child_process.js  crypto.js  fs.js  internal_test_binding.js  path.js  tls.js  util.js  worker_threads.js
unode/tests/node-compat/common/: assert.js  child_process.js  crypto.js  fixtures.js  index.js  process-exit-code-cases.js
unode/tests/runners/: test_3_node_dropin_subset_phase02.cc  test_env.h
(+294 files in other folders)
